# aloha-team-sai

./: .gitignore  Dockerfile  Home.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ssh_action.yml
aloha_team_sai/: Home.py  🌺_Home.py
aloha_team_sai/data/: SchedulePage.py
aloha_team_sai/database/: bus.csv
aloha_team_sai/metrics/: headcount.py  locations.csv  locations.py  meta.py  time_info.py  weather.py
aloha_team_sai/pages/: 000_💞 Our_Story.py  000_💞 Unsere Geschichte.py  001_🌟_Events.py  001_🥾_Hiking.py  002_🍱_Food.py  003_🗓️_Schedule.py  04_April_04_-_Aloha_✈️.py  04_April_04_-_Ankunft_✈️.py  04_April_05_-_Honolulu_👑🏙️.py  06_April_06_-_Polonesian_Culture_Center_🗿.py  06_April_06_-_Polynesian_Culture_Center_🗿.py  07_April_07_-_Hang_Loose_🤙🏽.py  08_April_08_-_Sandy_Beach_🏄‍♂️🌭🏖️.py  08_April_08_-_Waimea_Bay_Beach_🌅🏖️.py  08_April_08_-_Waimea_Beach_🌅🏖️.py  09_April_09_-_Get_Together_😃🌅🏖️.py  09_April_09_-_Get_Together_😃🏄‍♂️🌭.py  10_April_10_-_Kaneohe_⛰️🤠⛩️.py  11_April_11_-_The_Wedding_Day_👰🏻🤵🏽.py  12_April_12_-_Hangover_Plan_🕶️.py  13_April_13_-_Fotoshooting Brautpaar_📷.py  14_April_14_-_Waimea_Valley_🌾🌺🥭.py  16_April_16_-_Koko_Head_Crater.py  17_April_17_-_Big_Island_✈️.py  18_April_18_-_Easy_Beach_Day🌅🏖️.py  19_April_19_-_Star_Gazing_🔭✨🛰️.py  20_April_20_-_Lava_Wanderung_🌋.py  21_April_21_-_Birthday_Dinner_♨️🥩.py  22_April_22_-_Birthday_at_the_beach_🎉🎂.py  23_April_23_-_Oahu_✈️🙏🏽.py  24_April_24_-_Last_Day_💝.py  25_April_25_-_Abflugtag_✈️.py  99_Hiking_🥾.py  (+3 more)
pages/: 00_🥾_Hiking_Trails.py
texts/: trail_olomana.md
(+62 files in other folders)
