[tool.poetry]
name = "aloha-team-sai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aloha_team_sai"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
streamlit-folium = "^0.11.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
